Finish body images, start quote text

--- a/index.html
+++ b/index.html
@@ -35,22 +35,23 @@
                 <img src="./imgs/hero-placeholder.png" alt="This is a placeholder for the hero section">
             </div>
 
-            <div class="body container">
-                <div class="body-title-text">Some random information.</div>
+            <div class="body-title-text">Some random information.</div>
+
+            <div class="cards">
                 <div class="card one">
-                    <img src="./imgs/card-one.png" alt="Card one">
+                    <div class="card image"><img src="./imgs/card-one.png" alt="Card one"></div>
                     this is some subtext under an illustration or image
                 </div>
                 <div class="card two">
-                    <img src="./imgs/card-one.png" alt="Card one">
+                    <div class="card image"><img src="./imgs/card-one.png" alt="Card one"></div>
                     this is some subtext under an illustration or image
                 </div>
                 <div class="card three">
-                    <img src="./imgs/card-one.png" alt="Card one">
+                    <div class="card image"><img src="./imgs/card-one.png" alt="Card one"></div>
                     this is some subtext under an illustration or image
                 </div>
                 <div class="card four">
-                    <img src="./imgs/card-one.png" alt="Card one">
+                    <div class="card image"><img src="./imgs/card-one.png" alt="Card one"></div>
                     this is some subtext under an illustration or image
                 </div>
             </div>
