--- a/index.html
+++ b/index.html
@@ -63,11 +63,14 @@
                 <div class="quote-attribution">-Thor, God of Thunder</div>
             </div>
 
-            <data class="signup container">
-                <div class="signup-header-text">Call to action! It's time!</div>
-                <div class="signup-body-text">Sign up for our product by clicking that button right over there!</div>
-                <button>Sign Up</button>
-            </data>
+            <div class="signup container">
+                <div class="signup-text">
+                    <div class="signup-header-text">Call to action! It's time!</div>
+                    <div class="signup-body-text">Sign up for our product by clicking that button right over there!
+                    </div>
+                </div>
+                <button class="bottom-signup">Sign Up</button>
+            </div>
         </div>
 
         <div class="footer">
